@@ -1,3 +1,5 @@
+2005/9/14 -- released version 20050914_trunk
+
 * made some alert docs in smokeping_config visible --niko
 
 2005/9/13 -- released version 20050913_trunk
